Ajustes paginas fba

--- a/html/www-fba/pt/index.html
+++ b/html/www-fba/pt/index.html
@@ -137,19 +137,19 @@
                     <h4 class="subheading"><i class="fa fa-5x fa-amazon"></i> <br>FBA prep and ship</h4>
                     <p>Ideal para quem trabalha com FBA. Nos envie seus produtos. Nós inspecionamos, e realizamos tudo que você precisa para que seu produto chegue o mais rápido possível no seu inventário na Amazon.</p>
                     <p><a class="btn btn-danger" href="#prices"><i class="fa fa-check-square-o"></i> Valores</a></p>
-                    <p><a class="btn btn-danger" href="#fba"><i class="fa fa-check-square-o"></i> Como funciona</a></p>
+                    <!--<p><a class="btn btn-danger" href="#fba"><i class="fa fa-check-square-o"></i> Como funciona</a></p>-->
                 </div>
                 <div class="col-md-4 center">
                     <h4 class="subheading"><i class="fa fa-5x fa-shopping-cart"></i> <br>Ecommerce Storage prep and ship</h4>
                     <p>Esse serviço destina-se para quem vende seus produtos no mercado online, seja FBM, Ebay ou qualquer outro e precisa de um serviço onde possa receber, armazenar e enviar seus produtos de forma rápida e segura.</p>
-                    <p><a class="btn btn-danger" href="#storage"><i class="fa fa-check-square-o"></i> Valores</a></p>
-                    <p><a class="btn btn-danger" href="#storage"><i class="fa fa-check-square-o"></i> Como funciona</a></p>
+                    <p><a class="btn btn-danger" href="#prices"><i class="fa fa-check-square-o"></i> Valores</a></p>
+                    <!--<p><a class="btn btn-danger" href="#storage"><i class="fa fa-check-square-o"></i> Como funciona</a></p>-->
                 </div>
                 <div class="col-md-4 center">
-                    <h4 class="subheading"><i class="fa fa-5x fa-book"></i> <br>We plain your shipment on Amazon</h4>
-                    <p>Nós não nos limitamos a apenas armazenar, preparar e enviar seu produto como também criamos o seu envio na Amazon para você. Concentre-se em apenas fazer com que seu negócio cresça.</p>
-                    <p><a class="btn btn-danger" href="#storage"><i class="fa fa-check-square-o"></i> Valores</a></p>
-                    <p><a class="btn btn-danger" href="#plain"><i class="fa fa-check-square-o"></i> Como funciona</a></p>
+                    <h4 class="subheading"><i class="fa fa-5x fa-book"></i> <br>We create your shipment on Amazon</h4>
+                    <p>Nós não nos limitamos em apenas armazenar, preparar e enviar seu produto. Também podemos realizar toda a criação do seu shipment e geração dos labels. Concentre-se em apenas fazer com que seu negócio cresça.</p>
+                    <p><a class="btn btn-danger" href="#prices"><i class="fa fa-check-square-o"></i> Valores</a></p>
+                    <!--<p><a class="btn btn-danger" href="#plain"><i class="fa fa-check-square-o"></i> Como funciona</a></p>-->
                 </div>
 
             </div>
@@ -226,7 +226,7 @@
 
             </div>
         </div>
-    </section>-->
+    </section>
 
         <section id="como-funciona">
         <div class="container">
@@ -275,7 +275,7 @@
                 </div>
             </div>
         </div>
-        </section>
+        </section>-->
 
     <section id="prices" class="bg-light-gray">
         <div class="container">
@@ -311,28 +311,28 @@
 
                 <tr>
               		<td>Recebimento, Inspeção e colocar label</td>
-              		<td class="center">USD 0.70</td>
-              		<td class="center">USD 0.60</td>
+              		<td class="center">USD 0.70/por item</td>
+              		<td class="center">USD 0.60/por item</td>
                 </tr>
                  <tr>
               		<td>Remoção stick</td>
-              		<td class="center">USD 0.20</td>
-              		<td class="center">USD 0.18</td>
+              		<td class="center">USD 0.20/por item</td>
+              		<td class="center">USD 0.18/por item</td>
                 </tr>
                  <tr>
               		<td>Poly bag</td>
-              		<td class="center">USD 0.50</td>
-              		<td class="center">USD 0.40</td>
+              		<td class="center">USD 0.50/por item</td>
+              		<td class="center">USD 0.40/por item</td>
                 </tr>
                  <tr>
               		<td>Plastico bolha</td>
-                     <td class="center">USD 0.60</td>
-                     <td class="center">USD 0.50</td>
+                     <td class="center">USD 0.60/por item</td>
+                     <td class="center">USD 0.50/por item</td>
                 </tr>
                 <tr>
               		<td>Bundling</td>
-                     <td class="center">USD 2.00</td>
-                     <td class="center">USD 1.50</td>
+                     <td class="center">USD 2.00/por item</td>
+                     <td class="center">USD 1.50/por item</td>
                 </tr>
               <tr>
               		<td>Inserir label nas caixas</td>
@@ -346,13 +346,14 @@
               </tr>
               </tbody>
             </table>
+                    <small id="storage">* As caixas são cobradas por envio e não por produto. Por exemplo, um envio pode conter 100 itens e apenas uma caixa.</small>
                      <small id="storage">* Não há mensalidades, taxas de setup e nem flat rate. Você só paga pelo que usa.</small>
 
                     <small>* Envio deve ser feito até 10 dias após o produto ser recebido na warehouse. Após esse período será cobrado storage. Veja mais detalhes nos nossos <a href="#"> termos.</a></small>
 
 
                     <div class="contem-btn-ass">
-                         <a class="btn btn-primary" href="#"><i class="fa fa-fw fa-user-plus"></i> Cadastre-se</a>
+                         <a class="btn btn-primary" href="/pt/usuario/cadastro/"><i class="fa fa-fw fa-user-plus"></i> Cadastre-se</a>
                     </div>
                 </div>
             </div>
@@ -392,7 +393,7 @@
 
 
                     <div class="contem-btn-ass">
-                         <a class="btn btn-primary" href="#"><i class="fa fa-fw fa-user-plus"></i> Cadastre-se</a>
+                         <a class="btn btn-primary" href="/pt/usuario/cadastro/"><i class="fa fa-fw fa-user-plus"></i> Cadastre-se</a>
                     </div>
                 </div>
             </div>
