Ajustes site fba

--- a/html/www-fba/pt/index.html
+++ b/html/www-fba/pt/index.html
@@ -77,6 +77,9 @@
                         <a class="page-scroll" href="#prices">Valores</a>
                     </li>
                     <li>
+                        <a class="page-scroll" href="/pt/tutorial-plataforma">Tutorial</a>
+                    </li>
+                    <li>
                         <a title="Services" class="page-scroll" href="#contact">Contato</a>
                     </li>
                      <li>
@@ -111,6 +114,7 @@
                 <ul>
                     <li><i class="fa fa-2x fa-credit-card"></i> Tax Free - Nós estamos em New Hampshire</li>
                     <li><i class="fa fa-2x  fa-laptop"></i> plataforma automatizada de prep & ship.</li>
+                    <li><i class="fa fa-2x  fa-laptop"></i> Criamos seu envio na Amazon - <a href="/pt/create-az-shipment/" class="download">veja como</a> </li>
                     <li><i class="fa fa-2x  fa-barcode"></i> Serviço eficiente e profissional.</li>
                     <li><i class="fa fa-2x  fa-fire"></i> Seguro contra enchente, furtos e incêndio</li>
                     <li><i class="fa fa-2x  fa-cloud"></i> Desconntos no envio de grandes volumes</li>
@@ -137,7 +141,7 @@
                     <h4 class="subheading"><i class="fa fa-5x fa-amazon"></i> <br>FBA prep and ship</h4>
                     <p>Ideal para quem trabalha com FBA. Nos envie seus produtos. Nós inspecionamos, e realizamos tudo que você precisa para que seu produto chegue o mais rápido possível no seu inventário na Amazon.</p>
                     <p><a class="btn btn-danger" href="#prices"><i class="fa fa-check-square-o"></i> Valores</a></p>
-                    <!--<p><a class="btn btn-danger" href="#fba"><i class="fa fa-check-square-o"></i> Como funciona</a></p>-->
+                    <p><a class="btn btn-danger" href="/pt/tutorial-plataforma"><i class="fa fa-check-square-o"></i> Como funciona a plataforma</a></p>
                 </div>
                 <div class="col-md-4 center">
                     <h4 class="subheading"><i class="fa fa-5x fa-shopping-cart"></i> <br>Ecommerce Storage prep and ship</h4>
@@ -149,7 +153,7 @@
                     <h4 class="subheading"><i class="fa fa-5x fa-book"></i> <br>We create your shipment on Amazon</h4>
                     <p>Nós não nos limitamos em apenas armazenar, preparar e enviar seu produto. Também podemos realizar toda a criação do seu shipment e geração dos labels. Concentre-se em apenas fazer com que seu negócio cresça.</p>
                     <p><a class="btn btn-danger" href="#prices"><i class="fa fa-check-square-o"></i> Valores</a></p>
-                    <!--<p><a class="btn btn-danger" href="#plain"><i class="fa fa-check-square-o"></i> Como funciona</a></p>-->
+                    <p><a class="btn btn-danger" href="/pt/create-az-shipment/"><i class="fa fa-check-square-o"></i> Como funciona</a></p>
                 </div>
 
             </div>
@@ -411,7 +415,7 @@
                     </ul>
 
                     <div class="contem-btn-ass">
-                         <a class="btn btn-primary" href="#"><i class="fa fa-fw fa-user-plus"></i> Assinar</a>
+                         <a class="btn btn-primary" href="/pt/create-az-shipment/"><i class="fa fa-fw fa-user-plus"></i> Assinar</a>
                     </div>
                 </div>
             </div>
