--- a/html/www-fba/pt/termos-e-condicoes-de-uso/index.html
+++ b/html/www-fba/pt/termos-e-condicoes-de-uso/index.html
@@ -70,6 +70,9 @@
                     <li class="page-scroll">
                         <a title="Home" href="/pt/">Home</a>
                     </li>
+                    <li>
+                        <a class="page-scroll" href="/pt/tutorial-plataforma">Tutorial</a>
+                    </li>
                      <li>
                         <a title="Cadastre-se" href="/pt/usuario/cadastro">Cadastre-se</a>
                     </li>
