--- a/html/www-fba/pt/ajuda/index.html
+++ b/html/www-fba/pt/ajuda/index.html
@@ -71,7 +71,7 @@
                         <a title="Home" href="/pt/">Home</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="/pt/ajuda">Tutorial</a>
+                        <a class="page-scroll" href="/pt/tutorial-plataforma">Tutorial</a>
                     </li>
                      <li>
                         <a title="Cadastre-se" href="/pt/usuario/cadastro">Cadastre-se</a>
