--- a/html/www-fba/pt/index.html
+++ b/html/www-fba/pt/index.html
@@ -91,7 +91,7 @@
 
                 </ul>
 
-                <a title="Traduzir para português do Brasil" class="bandeira bandeira-en" href="/en/">Traduzir para Inglês</a>
+                <!--<a title="Traduzir para português do Brasil" class="bandeira bandeira-en" href="/en/">Traduzir para Inglês</a>-->
 
             </div>
             <!-- /.navbar-collapse -->
