--- a/html/www-fba/pt/index.html
+++ b/html/www-fba/pt/index.html
@@ -117,9 +117,7 @@
                     <li><i class="fa fa-2x  fa-laptop"></i> Criamos seu envio na Amazon - <a href="/pt/create-az-shipment/" class="download">veja como</a> </li>
                     <li><i class="fa fa-2x  fa-barcode"></i> Serviço eficiente e profissional.</li>
                     <li><i class="fa fa-2x  fa-fire"></i> Seguro contra enchente, furtos e incêndio</li>
-                    <li><i class="fa fa-2x  fa-cloud"></i> Desconntos no envio de grandes volumes</li>
-                    <li><i class="fa fa-2x  fa-users"></i> Equipe treinada e qualificada</li>
-                    <li><i class="fa fa-2x  fa-gavel"></i> Serviço de criação de labels</li>
+                    <li><i class="fa fa-2x  fa-cloud"></i> Descontos no envio de grandes volumes</li>
                 </ul><br>
                  <a href="/pt/usuario/cadastro/" title="Sign up now" class="btn btn-xl signup">Cadastre-se</a>
             </div>
@@ -472,7 +470,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-5">
-                    <span class="copyright">Copyright &copy; - VOI Services 2018</span>
+                    <span class="copyright">Copyright &copy; - FBAPrepMaster by VOI Redirect 2018</span>
                 </div>
                 <div class="col-md-2">
 
