--- a/html/www-fba/pt/create-az-shipment/index.html
+++ b/html/www-fba/pt/create-az-shipment/index.html
@@ -102,7 +102,8 @@
                     <h4 class="subheading">Não se preocupe mais em criar envios para Amamzon</h4>
                     <p class="text-muted">Nós criamos o seu envio na Amazon. Nos dê acesso a sua conta (Apenas na parte de shipment) e fazemos todos o processo. Basta apontar na plataforma quais produtos deseja enviar do seu estoque e faremos todo o resto.
                     Asgora só se preocupe em comprar seus produtos e enviá-los para nós. O resto nós faremos para você.</p>
-                    <p><a class="download" href="#"><i class="fa fa-link"></i> Veja como utilizar nossa plataforma de envio</a></p>
+                    <p><strong>Lembrando que para quem é VOI Prime esse serviço já está disponível automaticamente.</strong></p>
+                    <p><a class="download" href="/pt/tutorial-plataforma"><i class="fa fa-link"></i> Veja como utilizar nossa plataforma de envio</a></p>
                     <p><a class="btn btn-danger" href="#box-assinar"><i class="fa fa-check-square-o"></i> Assinar agora $ 24,90/mês</a></p>
                 </div>
                 <div class="col-md-5">
@@ -123,11 +124,10 @@
                          <p>Nós não teremos acesso a outras partes da sua conta, tais como: vendas, financeiro, etc.</p>
                      </div>
                   </div>
-                  <iframe width="100%" height="320" src="https://www.youtube.com/embed/Ynvz6vP0aJ4?enablejsapi=1&amp;modestbranding=1&amp;rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
+                  <iframe width="100%" height="320" src="https://www.youtube.com/embed/7oES14M6jeE?enablejsapi=1&amp;modestbranding=1&amp;rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
                 </div>
 
-            </div>
-            <br><br>
+            </div><br><br>
             <div class="row" id="box-assinar">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading text-center">Assinar Agora</h2>
@@ -147,7 +147,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <span class="copyright">Copyright &copy; FBAPrepMaster 2018</span>
+                    <span class="copyright">Copyright &copy; FBAPrepMaster by VOI Redirect 2018</span>
                 </div>
                 <div class="col-md-3">
                     <ul class="list-inline social-buttons"><!--
