--- a/html/www-fba/pt/tutorial-plataforma/index.html
+++ b/html/www-fba/pt/tutorial-plataforma/index.html
@@ -96,17 +96,44 @@
                 <section>
                     <div class="row">
                         <div class="col-lg-12 text-center">
-                            <h3 class="section-heading text-center">veja abaixo utilizar nossa plataforma de redirecionamento</h3><br>
+                            <h3 class="section-heading text-center">Veja abaixo como se cadastrar</h3><br>
                         </div>
-                        <iframe width="100%" height="420" src="https://www.youtube.com/embed/Ynvz6vP0aJ4?enablejsapi=1&amp;modestbranding=1&amp;rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
+                        <iframe width="70%" height="420" style="margin: 0 auto; display: block;" src="https://www.youtube.com/embed/hjz1goJRLBw?enablejsapi=1&amp;modestbranding=1&amp;rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
                     </div>
                 </section><hr />
                 <section>
                     <div class="row">
                         <div class="col-lg-12 text-center">
-                            <h3 class="section-heading text-center">veja abaixo configurar sua conta Amazon para utilizar nosso serviço We create your Amazon Shipment</h3><br>
+                            <h3 class="section-heading text-center">Veja abaixo para que serve o código de usuário</h3><br>
                         </div>
-                        <iframe width="100%" height="420" src="https://www.youtube.com/embed/Ynvz6vP0aJ4?enablejsapi=1&amp;modestbranding=1&amp;rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
+                        <iframe width="70%" height="420" style="margin: 0 auto; display: block;" src="https://www.youtube.com/embed/efCW5YxnDm0?enablejsapi=1&amp;modestbranding=1&amp;rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
+                    </div>
+                </section>
+                <hr />
+                <section>
+                    <div class="row">
+                        <div class="col-lg-12 text-center">
+                            <h3 class="section-heading text-center">Veja abaixo como cadastrar um produto</h3><br>
+                        </div>
+                        <iframe width="70%" height="420" style="margin: 0 auto; display: block;" src="https://www.youtube.com/embed/F0L1rjQ9t4A?enablejsapi=1&amp;modestbranding=1&amp;rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
+                    </div>
+                </section>
+                <hr />
+                <section>
+                    <div class="row">
+                        <div class="col-lg-12 text-center">
+                            <h3 class="section-heading text-center">Veja abaixo como criar envio FBA (Enviando o label dos produtos)</h3><br>
+                        </div>
+                        <iframe width="70%" height="420" style="margin: 0 auto; display: block;" src="https://www.youtube.com/embed/F3sxVg-6P0s?enablejsapi=1&amp;modestbranding=1&amp;rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
+                    </div>
+                </section><
+                <hr />
+                <section>
+                    <div class="row">
+                        <div class="col-lg-12 text-center">
+                            <h3 class="section-heading text-center">Veja abaixo como criar envio FBA (Finalizando envio)</h3><br>
+                        </div>
+                        <iframe width="70%" height="420" style="margin: 0 auto; display: block;" src="https://www.youtube.com/embed/gsHYPycYL-g?enablejsapi=1&amp;modestbranding=1&amp;rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
                     </div>
                 </section>
             </div>
@@ -127,7 +154,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <span class="copyright">Copyright &copy; FBAPrepMaster by VOI Redirect</span>
+                    <span class="copyright">Copyright &copy; FBAPrepMaster by VOI Redirect 2018</span>
                 </div>
                 <div class="col-md-3">
                     <ul class="list-inline social-buttons"><!--
