--- a/html/www-fba/pt/index.html
+++ b/html/www-fba/pt/index.html
@@ -114,10 +114,11 @@
                 <ul>
                     <li><i class="fa fa-2x fa-credit-card"></i> Tax Free - Nós estamos em New Hampshire</li>
                     <li><i class="fa fa-2x  fa-laptop"></i> plataforma automatizada de prep & ship.</li>
-                    <li><i class="fa fa-2x  fa-laptop"></i> Criamos seu envio na Amazon - <a href="/pt/create-az-shipment/" class="download">veja como</a> </li>
+                    <li><i class="fa fa-2x fa-share-square"></i> Criamos seu envio na Amazon - <a href="/pt/create-az-shipment/" class="download">veja como</a> </li>
                     <li><i class="fa fa-2x  fa-barcode"></i> Serviço eficiente e profissional.</li>
                     <li><i class="fa fa-2x  fa-fire"></i> Seguro contra enchente, furtos e incêndio</li>
                     <li><i class="fa fa-2x  fa-cloud"></i> Descontos no envio de grandes volumes</li>
+                    <li><i class="fa fa-2x fa-money"></i> Sem Flat rate - Aqui você só paga pelo prep que utiliza - <a href="#prices" class="download">Valores</a> </li>
                 </ul><br>
                  <a href="/pt/usuario/cadastro/" title="Sign up now" class="btn btn-xl signup">Cadastre-se</a>
             </div>
@@ -405,7 +406,7 @@
             <div class="col-md-6" id="plain">
             <div class="box-comparativo-valor">
                 <div class="box-valor">
-                    <p class="seja center">We plain your shipment on Amazon</p>
+                    <p class="seja center">We create your shipment on Amazon</p>
                     <p class="assinate-span"><span>U$ 19,90</span>/mês</p>
                     <small></small>
                     <ul style="width: 100%;">
