--- a/html/www-fba/pt/ajuda/index.html
+++ b/html/www-fba/pt/ajuda/index.html
@@ -61,7 +61,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll logo-site" href="#page-top">PrepShip Tool logo</a><span>By <strong>VOIRedirect</strong></span>
+                <a class="navbar-brand page-scroll logo-site" href="/pt/">PrepShip Tool logo</a><span>By <strong>VOIRedirect</strong></span>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
