--- a/html/www-fba/pt/index.html
+++ b/html/www-fba/pt/index.html
@@ -61,14 +61,14 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll logo-site" href="#page-top">PrepShip Tool logo</a><span>By <strong>VOIRedirect</strong></span>
+                <a class="navbar-brand page-scroll logo-site" href="/pt/">PrepShip Tool logo</a><span>By <strong>VOIRedirect</strong></span>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="page-scroll">
-                        <a title="Home" href="#page-top">Home</a>
+                        <a title="Home" href="/pt/">Home</a>
                     </li>
                     <li>
                         <a title="Services" class="page-scroll" href="#services">Serviços</a>
