ajustes layout a add campo obs

--- a/html/www-fba/pt/index.html
+++ b/html/www-fba/pt/index.html
@@ -145,13 +145,13 @@
                 <div class="col-md-4 center">
                     <h4 class="subheading"><i class="fa fa-5x fa-shopping-cart"></i> <br>Ecommerce Storage prep and ship</h4>
                     <p>Esse serviço destina-se para quem vende seus produtos no mercado online, seja FBM, Ebay ou qualquer outro e precisa de um serviço onde possa receber, armazenar e enviar seus produtos de forma rápida e segura.</p>
-                    <p><a class="btn btn-danger" href="#prices"><i class="fa fa-check-square-o"></i> Valores</a></p>
+                    <p><a class="btn btn-danger" href="#prices-b"><i class="fa fa-check-square-o"></i> Valores</a></p>
                     <!--<p><a class="btn btn-danger" href="#storage"><i class="fa fa-check-square-o"></i> Como funciona</a></p>-->
                 </div>
                 <div class="col-md-4 center">
                     <h4 class="subheading"><i class="fa fa-5x fa-book"></i> <br>We create your shipment on Amazon</h4>
                     <p>Nós não nos limitamos em apenas armazenar, preparar e enviar seu produto. Também podemos realizar toda a criação do seu shipment e geração dos labels. Concentre-se em apenas fazer com que seu negócio cresça.</p>
-                    <p><a class="btn btn-danger" href="#prices"><i class="fa fa-check-square-o"></i> Valores</a></p>
+                    <p><a class="btn btn-danger" href="#prices-b"><i class="fa fa-check-square-o"></i> Valores</a></p>
                     <p><a class="btn btn-danger" href="/pt/create-az-shipment/"><i class="fa fa-check-square-o"></i> Como funciona</a></p>
                 </div>
 
@@ -306,7 +306,7 @@
                       Até 100 itens por envio
                   </th>
                     <th class="center">
-                      Acima de 100 itens por envio
+                      Acima de 100 itens por envio ou Preço para assinantes VOI Prime
                   </th>
                 </tr>
               </thead>
@@ -356,7 +356,7 @@
 
 
                     <div class="contem-btn-ass">
-                         <a class="btn btn-primary" href="/pt/usuario/cadastro/"><i class="fa fa-fw fa-user-plus"></i> Cadastre-se</a>
+                         <a class="btn btn-primary" id="prices-b" href="/pt/usuario/cadastro/"><i class="fa fa-fw fa-user-plus"></i> Cadastre-se</a>
                     </div>
                 </div>
             </div>
@@ -407,7 +407,7 @@
             <div class="box-comparativo-valor">
                 <div class="box-valor">
                     <p class="seja center">We create your shipment on Amazon</p>
-                    <p class="assinate-span"><span>U$ 19,90</span>/mês</p>
+                    <p class="assinate-span"><span>U$ 24,90</span>/mês</p>
                     <small></small>
                     <ul style="width: 100%;">
                         <li><i class="fa fa-fw fa-check-circle-o"></i> <span>Criação de envio na Amazon</span></li>
