Ajustes meta tags

--- a/html/www-fba/pt/index.html
+++ b/html/www-fba/pt/index.html
@@ -9,13 +9,14 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>PrepShip Tool</title>
-    <meta property="og:image" content="../../static/img/logo-en-maior.png"/>
-    <meta name="description" content="Prepship Tool. We are the only fully automated prep & ship platform. No more sending emails back and forth. No more wait. Our system will notify you all the steps of the shipment creation."/>
-    <meta property="og:title" content="Prepship Tool"/>
-    <meta property="og:site_name" content="Prepship Tool"/>
-    <meta property="og:description" content="Prepship Tool. We are the only fully automated prep & ship platform. No more sending emails back and forth. No more wait. Our system will notify you all the steps of the shipment creation."/>
+    <title>FBA PrepMaster - Termos e condicoes</title>
+    <meta property="og:image" content="../../static/img/logo-en-old.png"/>
+    <meta name="description" content="FBA PrepMaster - TAX FREE - NÓS ESTAMOS EM NEW HAMPSHIRE PLATAFORMA AUTOMATIZADA DE PREP & SHIP. CRIAMOS SEU ENVIO NA AMAZON - VEJA COMO SERVIÇO EFICIENTE E PROFISSIONAL. SEGURO CONTRA ENCHENTE, FURTOS E INCÊNDIO DESCONTOS NO ENVIO DE GRANDES VOLUMES SEM FLAT RATE - AQUI VOCÊ SÓ PAGA PELO PREP QUE UTILIZA"/>
+    <meta property="og:title" content="FBA PrepMaster"/>
+    <meta property="og:site_name" content="FBA PrepMaster"/>
+    <meta property="og:description" content="FBA PrepMaster - TAX FREE - NÓS ESTAMOS EM NEW HAMPSHIRE PLATAFORMA AUTOMATIZADA DE PREP & SHIP. CRIAMOS SEU ENVIO NA AMAZON - VEJA COMO SERVIÇO EFICIENTE E PROFISSIONAL. SEGURO CONTRA ENCHENTE, FURTOS E INCÊNDIO DESCONTOS NO ENVIO DE GRANDES VOLUMES SEM FLAT RATE - AQUI VOCÊ SÓ PAGA PELO PREP QUE UTILIZA"/>
     <meta property="og:type" content="website"/>
+
 
     <!-- Bootstrap Core CSS -->
     <link href="../../static/externo/bootstrap/css/bootstrap.min.css" rel="stylesheet">
