--- a/html/www-fba/pt/tutorial-plataforma/index.html
+++ b/html/www-fba/pt/tutorial-plataforma/index.html
@@ -9,12 +9,12 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Prepship Tool - Termos e condicoes</title>
-    <meta property="og:image" content="../../static/img/logo-en-maior.png"/>
-    <meta name="description" content="Prepship Tool. Somos a única plataforma totalmente automatizada de preparação e envio para Amazon. Você não precisa mais controlar seus envios e invetario em planilhas e email. Nosso sistema irá notificá-lo todas as etapas desde o recebimento do seu produto, a preparação e o envio para Amazon. Além disso, você pode acessar a nossa plataforma a hora que quiser para verificar a situação do seu estoque e seus produtos."/>
-    <meta property="og:title" content="Prepship Tool"/>
-    <meta property="og:site_name" content="Prepship Tool"/>
-    <meta property="og:description" content="Prepship Tool. Somos a única plataforma totalmente automatizada de preparação e envio para Amazon. Você não precisa mais controlar seus envios e invetario em planilhas e email. Nosso sistema irá notificá-lo todas as etapas desde o recebimento do seu produto, a preparação e o envio para Amazon. Além disso, você pode acessar a nossa plataforma a hora que quiser para verificar a situação do seu estoque e seus produtos."/>
+    <title>FBA PrepMaster - Termos e condicoes</title>
+    <meta property="og:image" content="../../static/img/logo-en-old.png"/>
+    <meta name="description" content="FBA PrepMaster - TAX FREE - NÓS ESTAMOS EM NEW HAMPSHIRE PLATAFORMA AUTOMATIZADA DE PREP & SHIP. CRIAMOS SEU ENVIO NA AMAZON - VEJA COMO SERVIÇO EFICIENTE E PROFISSIONAL. SEGURO CONTRA ENCHENTE, FURTOS E INCÊNDIO DESCONTOS NO ENVIO DE GRANDES VOLUMES SEM FLAT RATE - AQUI VOCÊ SÓ PAGA PELO PREP QUE UTILIZA"/>
+    <meta property="og:title" content="FBA PrepMaster"/>
+    <meta property="og:site_name" content="FBA PrepMaster"/>
+    <meta property="og:description" content="FBA PrepMaster - TAX FREE - NÓS ESTAMOS EM NEW HAMPSHIRE PLATAFORMA AUTOMATIZADA DE PREP & SHIP. CRIAMOS SEU ENVIO NA AMAZON - VEJA COMO SERVIÇO EFICIENTE E PROFISSIONAL. SEGURO CONTRA ENCHENTE, FURTOS E INCÊNDIO DESCONTOS NO ENVIO DE GRANDES VOLUMES SEM FLAT RATE - AQUI VOCÊ SÓ PAGA PELO PREP QUE UTILIZA"/>
     <meta property="og:type" content="website"/>
 
     <!-- Bootstrap Core CSS -->
