--- a/html/www-fba/pt/create-az-shipment/index.html
+++ b/html/www-fba/pt/create-az-shipment/index.html
@@ -102,9 +102,15 @@
                     <h4 class="subheading">Não se preocupe mais em criar envios para Amamzon</h4>
                     <p class="text-muted">Nós criamos o seu envio na Amazon. Nos dê acesso a sua conta (Apenas na parte de shipment) e fazemos todos o processo. Basta apontar na plataforma quais produtos deseja enviar do seu estoque e faremos todo o resto.
                     Asgora só se preocupe em comprar seus produtos e enviá-los para nós. O resto nós faremos para você.</p>
-                    <p><strong>Lembrando que para quem é VOI Prime esse serviço já está disponível automaticamente.</strong></p>
                     <p><a class="download" href="/pt/tutorial-plataforma"><i class="fa fa-link"></i> Veja como utilizar nossa plataforma de envio</a></p>
-                    <p><a class="btn btn-danger" href="#box-assinar"><i class="fa fa-check-square-o"></i> Assinar agora $ 24,90/mês</a></p>
+                    <div class="col-md-12">
+                        <p>
+                            <a class="btn btn-danger" href="#box-assinar"><i class="fa fa-check-square-o"></i> Assinar agora $ 24,90/mês</a>
+                        </p>
+                         <div class="alert alert-success col-md-10">
+                             <p><strong>Assinante VOI Prime já possuí esse serviço na sua assinatura.</strong></p>
+                         </div>
+                    </div>
                 </div>
                 <div class="col-md-5">
                     <img src="../../../static/img/projects/8.png" width="80%" />
