--- a/html/www-fba/pt/create-az-shipment/index.html
+++ b/html/www-fba/pt/create-az-shipment/index.html
@@ -101,7 +101,7 @@
                 <div class="col-md-7">
                     <h4 class="subheading">Não se preocupe mais em criar envios para Amamzon</h4>
                     <p class="text-muted">Nós criamos o seu envio na Amazon. Nos dê acesso a sua conta (Apenas na parte de shipment) e fazemos todos o processo. Basta apontar na plataforma quais produtos deseja enviar do seu estoque e faremos todo o resto.
-                    Asgora só se preocupe em comprar seus produtos e enviá-los para nós. O resto nós faremos para você.</p>
+                    Agora só se preocupe em comprar seus produtos e enviá-los para nós. O resto nós faremos para você.</p>
                     <p><a class="download" href="/pt/tutorial-plataforma"><i class="fa fa-link"></i> Veja como utilizar nossa plataforma de envio</a></p>
                     <div class="col-md-12">
                         <p>
