Ajustes layout sistema

--- a/html/www-fba/pt/index.html
+++ b/html/www-fba/pt/index.html
@@ -152,7 +152,7 @@
                     <!--<p><a class="btn btn-danger" href="#storage"><i class="fa fa-check-square-o"></i> Como funciona</a></p>-->
                 </div>
                 <div class="col-md-4 center">
-                    <h4 class="subheading"><i class="fa fa-5x fa-book"></i> <br>We create your shipment on Amazon</h4>
+                    <h4 class="subheading"><i class="fa fa-5x fa-book"></i> <br>We create your Amazon Shipment</h4>
                     <p>Nós não nos limitamos em apenas armazenar, preparar e enviar seu produto. Também podemos realizar toda a criação do seu shipment e geração dos labels. Concentre-se em apenas fazer com que seu negócio cresça.</p>
                     <p><a class="btn btn-danger" href="#prices-b"><i class="fa fa-check-square-o"></i> Valores</a></p>
                     <p><a class="btn btn-danger" href="/pt/create-az-shipment/"><i class="fa fa-check-square-o"></i> Como funciona</a></p>
@@ -409,7 +409,7 @@
             <div class="col-md-6" id="plain">
             <div class="box-comparativo-valor">
                 <div class="box-valor">
-                    <p class="seja center">We create your shipment on Amazon</p>
+                    <p class="seja center">We create your Amazon Shipment</p>
                     <p class="assinate-span"><span>U$ 24,90</span>/mês</p>
                     <small></small>
                     <ul style="width: 100%;">
